--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,30 +1,37 @@
 {
-    "suggest.completionItemKindLabels": {
-        "keyword":       "\uf1de Keyword ",
-        "variable":      "\ue79b Variable ",
-        "value":         "\uf89f Value ",
-        "operator":      "\u03a8 Operator ",
-        "function":      "\u0192 Function ",
-        "reference":     "\ufa46 Reference ",
-        "constant":      "\uf8fe Constant ",
-        "method":        "\uf09a Method ",
-        "struct":        "\ufb44 Struct ",
-        "class":         "\uf0e8 Class ",
-        "interface":     "\uf417 Interface ",
-        "text":          "\ue612 Text ",
-        "enum":          "\uf435 Enum ",
-        "enumMember":    "\uf02b EnumMember ",
-        "module":        "\uf40d Module ",
-        "color":         "\ue22b Color ",
-        "property":      "\ue624 Property ",
-        "field":         "\uf9be Field ",
-        "unit":          "\uf475 Unit ",
-        "event":         "\ufacd Event ",
-        "file":          "\uf723 File ",
-        "folder":        "\uf114 Folder ",
-        "snippet":       "\ue60b Snippet ",
-        "typeParameter": "\uf728 TypeParam ",
-        "default":       "\uf29c Default "
-    },
-    "Lua.telemetry.enable": true
+  "suggest.completionItemKindLabels": {
+    "keyword": "\uf1de Keyword ",
+    "variable": "\ue79b Variable ",
+    "value": "\uf89f Value ",
+    "operator": "\u03a8 Operator ",
+    "function": "\u0192 Function ",
+    "reference": "\ufa46 Reference ",
+    "constant": "\uf8fe Constant ",
+    "method": "\uf09a Method ",
+    "struct": "\ufb44 Struct ",
+    "class": "\uf0e8 Class ",
+    "interface": "\uf417 Interface ",
+    "text": "\ue612 Text ",
+    "enum": "\uf435 Enum ",
+    "enumMember": "\uf02b EnumMember ",
+    "module": "\uf40d Module ",
+    "color": "\ue22b Color ",
+    "property": "\ue624 Property ",
+    "field": "\uf9be Field ",
+    "unit": "\uf475 Unit ",
+    "event": "\ufacd Event ",
+    "file": "\uf723 File ",
+    "folder": "\uf114 Folder ",
+    "snippet": "\ue60b Snippet ",
+    "typeParameter": "\uf728 TypeParam ",
+    "default": "\uf29c Default "
+  },
+  "[dart]": {
+    "coc.preferences.formatOnSave": true
+  },
+  "Lua.telemetry.enable": true,
+  "flutter.autoOpenDevLog": true,
+  "flutter.autoHideDevLog": true,
+  "flutter.openDevLogSplitCommand": "botright 10split",
+  "flutter.runDevToolsAtStartup": true
 }
