--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,3 +1,4 @@
+// vim: filetype=jsonc
 {
   "suggest.completionItemKindLabels": {
     "keyword": "\uf1de Keyword ",
@@ -26,12 +27,25 @@
     "typeParameter": "\uf728 TypeParam ",
     "default": "\uf29c Default "
   },
-  "[dart]": {
+  "[dart]": { 
+    "coc.preferences.formatOnSave": true
+  },
+  "[go]": {
     "coc.preferences.formatOnSave": true
   },
   "Lua.telemetry.enable": true,
   "flutter.autoOpenDevLog": true,
   "flutter.autoHideDevLog": true,
   "flutter.openDevLogSplitCommand": "botright 10split",
-  "flutter.runDevToolsAtStartup": true
+  "flutter.runDevToolsAtStartup": true,
+  "languageserver": {
+    "golang": {
+      "command": "gopls",
+      "rootPatterns": ["go.work", "go.mod", ".vim/", ".git/", ".hg/"],
+      "filetypes": ["go"],
+      "initializationOptions": {
+        "usePlaceholders": true
+      }
+    }
+  }
 }
