--- a/coc-settings.json
+++ b/coc-settings.json
@@ -39,13 +39,8 @@
   "flutter.openDevLogSplitCommand": "botright 10split",
   "flutter.runDevToolsAtStartup": true,
   "languageserver": {
-    "golang": {
-      "command": "gopls",
-      "rootPatterns": ["go.work", "go.mod", ".vim/", ".git/", ".hg/"],
-      "filetypes": ["go"],
-      "initializationOptions": {
-        "usePlaceholders": true
-      }
-    }
+  },
+  "go.goplsOptions": {
+    "gofumpt": true
   }
 }
